[package]
name = "agno"
version = "0.1.0"
edition = "2024"

[lib]
name = "agno"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
env_logger = "0.11.8"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
libc = "0.2.175"
log = "0.4.27"
pdf = "0.9.0"
pdfium-render = {version = "0.8.35", features = ["static"], optional = true}
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tiff = "0.10.0"
webp = "0.3.0"

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-g++"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-g++"

[package.metadata.cross]
target = "x86_64-unknown-linux-musl"

[features]
pdf = ["dep:pdfium-render"]
